Добавил секцию "Categories"

--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
       </div>
     </header>
 
+    <section class="categories">
+      <h2>Categories</h2>
+      <div class="categories__wrapper">
+        <div class="item">
+          <h3>FIXED / SINGLE SPEED</h3>
+          <p>Are You ready for the 27.5 Revolution?</p>
+          <button>GO TO STORE</button>
+        </div>
+        <div class="item">
+          <h3>PREMIUM SERIES</h3>
+          <p>Exclusive  Bike Components</p>
+          <button>GO TO STORE</button>
+        </div>
+        <div class="item">
+          <h3>CITY BIKES</h3>
+          <p>Street Playground</p>
+          <button>GO TO STORE</button>
+        </div>
+      </div>
+    </section>
+
     <script src="js/slider.js"></script>
   </body>
 </html>
