Уменьшил вес картинок

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <a class="arrow prev"></a>
         <div class="gallery">
           <ul class="images">
-            <li><img src="img/slider_photo.png"></li>
-            <li><img src="img/slider_photo.png"></li>
-            <li><img src="img/slider_photo.png"></li>
-            <li><img src="img/slider_photo.png"></li>
-            <li><img src="img/slider_photo.png"></li>
+            <li><img src="img/slider_photo.jpg"></li>
+            <li><img src="img/slider_photo.jpg"></li>
+            <li><img src="img/slider_photo.jpg"></li>
+            <li><img src="img/slider_photo.jpg"></li>
+            <li><img src="img/slider_photo.jpg"></li>
           </ul>
         </div>
         <a class="arrow next"></a>
