Добавил секцию "Gallery-bikes"

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1 class="header__title">HANDMADE BICYCLE</h1>
         <p class="header__slogan">You <span>create</span> the <span>journey,</span> we supply the <span>parts.</span></p>
         <button class="btn">SHOP BIKES</button>
-        <a  class="scroll-icon" href="#"></a>
+        <a  class="scroll-icon" href="#gallery-bikes"></a>
       </div>
       
       <div id="slider" class="slider">
@@ -67,6 +67,54 @@
           <h3>CITY BIKES</h3>
           <p>Street Playground</p>
           <button>GO TO STORE</button>
+        </div>
+      </div>
+    </section>
+    
+    <section id="gallery-bikes" class="gallery-bikes">
+      <h2>Popular bikes</h2>
+      <div class="gallery-bikes__wrapper">
+        <div class="gallery-bikes__item">
+          <img src="img/bike_1.jpg" alt="Fixed Gear">
+          <form class="gallery-bikes__price" action="#">
+            <p><span>Fixed Gear</span><br>$249.00</p>
+            <div class="gallery-bikes__inner-wrapper">
+              <select>
+                <option value="">OPTION</option>
+                <option value="">OPTION</option>
+                <option value="">OPTION</option>
+              </select>
+              <button class="submit">BUY</button>
+            </div>
+          </form>
+        </div>
+        <div class="gallery-bikes__item">
+          <img src="img/bike_2.jpg" alt="Big Boy Ultra">
+          <form class="gallery-bikes__price" action="#">
+            <p><span>Big Boy Ultra</span><br>$249.00</p>
+            <div class="gallery-bikes__inner-wrapper">
+              <select>
+                <option value="">OPTION</option>
+                <option value="">OPTION</option>
+                <option value="">OPTION</option>
+              </select>
+              <button class="submit">BUY</button>
+            </div>
+          </form>
+        </div>
+        <div class="gallery-bikes__item">
+          <img src="img/bike_3.jpg" alt="Sanchaez">
+          <form class="gallery-bikes__price" action="#">
+            <p><span>Sanchaez</span><br>$249.00</p>
+            <div class="gallery-bikes__inner-wrapper">
+              <select>
+                <option value="">OPTION</option>
+                <option value="">OPTION</option>
+                <option value="">OPTION</option>
+              </select>
+              <button class="submit">BUY</button>
+            </div>
+          </form>
         </div>
       </div>
     </section>
