Добавил секции "Contact" и "Footer"

--- a/index.html
+++ b/index.html
@@ -119,6 +119,28 @@
       </div>
     </section>
 
+    <section class="contact">
+      <h2>Contact Us</h2>
+      <p>Please contact us for all inquiries and purchase options.</p>
+      <form class="contact__form" action="#">
+        <input type="text" placeholder="name">
+        <input type="text" placeholder="surname">
+        <input type="email" placeholder="user@domain.com">
+        <textarea name="message" cols="60" rows="10" placeholder="message"></textarea>
+        <input type="submit" value="send">
+      </form>
+    </section>
+
+    <footer class="footer">
+      <a class="footer__logo" href="#"><img src="img/logo_footer.png" alt="Logo"></a>
+      <ul class="footer__menu">
+        <li><a href="#">BICYCLES</a></li>
+        <li><a href="#">PARTS</a></li>
+        <li><a href="#">ACCESSORIES</a></li>
+        <li><a href="#">EXTRAS</a></li>
+      </ul>
+    </footer>
+
     <script src="js/slider.js"></script>
   </body>
 </html>
